force-app/main/default/objects/SuperheroMission__c/SuperheroMission__c.object-meta.xml
<CustomObject>
    <label>Superhero Mission</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Superhero Missions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>