force-app/main/default/objects/SuperheroMission__c/fields/Guild__c.field-meta.xml
<CustomField>
    <fullName>Guild__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Guild</label>
    <referenceTo>Guild__c</referenceTo>
    <relationshipLabel>Superhero Missions</relationshipLabel>
    <relationshipName>SuperheroMissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>