force-app/main/default/objects/SuperheroMission__c/fields/IsPublic__c.field-meta.xml
<CustomField>
    <fullName>IsPublic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>