force-app/main/default/objects/SuperheroMission__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <label>Reward</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>